Add headshot photo and update HTML to display it

--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@
     <div class="card">
         <div class="photo-container">
             <div class="photo">
-                <!-- Replace with: <img src="photo.jpg" alt="Will Sigmon"> -->
-                <i class="fas fa-user"></i>
+                <img src="photo.jpg" alt="Will Sigmon">
             </div>
         </div>
 
